kubernetes/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onekingdom-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: onekingdom-frontend
  template:
    metadata:
      labels:
        app: onekingdom-frontend
    spec:
      containers:
      - name: onekingdom-frontend
        image: ghcr.io/onekingdom/onekingdom-website:fbe90fdf47f9723ef91108f81ae94cf2d6a04cd0
        ports:
        - containerPort: 3000
