kubernetes/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onekingdom-frontend-nl
  annotations: { cert-manager.io/cluster-issuer: "letsencrypt-prod" }

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ok.jochemwhite.nl
      secretName: onekingdom-frontend-secret
  rules:
    - host: ok.jochemwhite.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onekingdom-frontend-service
                port:
                  number: 80
